--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "inquirer": "^8.0.0"
   },
   "devDependencies": {
-    "@types/inquirer": "^9.0.7"
+    "@types/inquirer": "^9.0.7",
+    "@types/node": "^20.11.28"
   }
 }
